[GOJHW-6]: add http-gateway
